@@ -17,8 +17,8 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
+
 require_once dirname(__FILE__).'/include/config.inc.php';
 
 $page['title'] = _('Configuration of GUI');
@@ -29,20 +29,18 @@ require_once dirname(__FILE__).'/include/page_header.php';
 
 // VAR	TYPE	OPTIONAL	FLAGS	VALIDATION	EXCEPTION
 $fields = array(
-	'default_theme' =>				array(T_ZBX_STR, O_OPT, null,			NOT_EMPTY,			'isset({save})'),
-	'event_ack_enable' =>			array(T_ZBX_INT, O_OPT, null,	IN('1'),			null),
-	'event_expire' =>	array(T_ZBX_INT, O_OPT, null, BETWEEN(1, 99999), 'isset({save})',
-		_('Show events not older than (in days)')),
-	'event_show_max' =>	array(T_ZBX_INT, O_OPT, null, BETWEEN(1, 99999), 'isset({save})',
-		_('Max count of events per trigger to show')),
-	'dropdown_first_entry' =>		array(T_ZBX_INT, O_OPT, null,	IN('0,1,2'),		'isset({save})'),
-	'dropdown_first_remember' =>	array(T_ZBX_INT, O_OPT, null,	IN('1'),			null),
-	'max_in_table' => array(T_ZBX_INT, O_OPT, null, BETWEEN(1, 99999), 'isset({save})',
-		_('Max count of elements to show inside table cell')),
-	'search_limit' => array(T_ZBX_INT, O_OPT, null, BETWEEN(1, 999999), 'isset({save})',
-		_('Search/Filter elements limit')),
-	'save' =>						array(T_ZBX_STR, O_OPT, P_SYS|P_ACT,	null,				null),
-	'form_refresh' =>				array(T_ZBX_INT, O_OPT, null,			null,				null)
+	'default_theme'           => array(T_ZBX_STR, O_OPT, null,        NOT_EMPTY,                 'isset({save})'),
+	'event_ack_enable'        => array(T_ZBX_INT, O_OPT, null,        IN('1'),                   null),
+	'event_expire'            => array(T_ZBX_INT, O_OPT, null,        BETWEEN(1, 99999),         'isset({save})', _('Show events not older than (in days)')),
+	'event_show_max'          => array(T_ZBX_INT, O_OPT, null,        BETWEEN(1, 99999),         'isset({save})', _('Max count of events per trigger to show')),
+	'dropdown_first_entry'    => array(T_ZBX_INT, O_OPT, null,        IN('0,1,2'),               'isset({save})'),
+	'dropdown_first_remember' => array(T_ZBX_INT, O_OPT, null,        IN('1'),                   null),
+	'max_in_table'            => array(T_ZBX_INT, O_OPT, null,        BETWEEN(1, 99999),         'isset({save})', _('Max count of elements to show inside table cell')),
+	'search_limit'            => array(T_ZBX_INT, O_OPT, null,        BETWEEN(1, 999999),        'isset({save})', _('Search/Filter elements limit')),
+	'server_check_interval'   => array(T_ZBX_INT, O_OPT, null,        BETWEEN(30, SEC_PER_HOUR), null, _('Zabbix server activity check interval')),
+	'server_check_enabled'    => array(T_ZBX_INT, O_OPT, null,        null,                      null),
+	'save'                    => array(T_ZBX_STR, O_OPT, P_SYS|P_ACT, null,                      null),
+	'form_refresh'            => array(T_ZBX_INT, O_OPT, null,        null,                      null)
 );
 check_fields($fields);
 
@@ -58,7 +56,8 @@ if (isset($_REQUEST['save'])) {
 		'dropdown_first_entry' => get_request('dropdown_first_entry'),
 		'dropdown_first_remember' => (is_null(get_request('dropdown_first_remember')) ? 0 : 1),
 		'max_in_table' => get_request('max_in_table'),
-		'search_limit' => get_request('search_limit')
+		'search_limit' => get_request('search_limit'),
+		'server_check_interval' => get_request('server_check_interval', 0)
 	);
 
 	$result = update_config($configs);
@@ -74,6 +73,7 @@ if (isset($_REQUEST['save'])) {
 		$msg[] = _s('Dropdown first entry "%1$s".', get_request('dropdown_first_entry'));
 		$msg[] = _s('Dropdown remember selected "%1$s".', get_request('dropdown_first_remember'));
 		$msg[] = _s('Max count of elements to show inside table cell "%1$s".', get_request('max_in_table'));
+		$msg[] = _s('Zabbix server is running check interval "%1$s".', get_request('server_check_interval'));
 
 		add_audit(AUDIT_ACTION_UPDATE, AUDIT_RESOURCE_ZABBIX_CONFIG, implode('; ', $msg));
 	}
@@ -115,9 +115,16 @@ if ($data['form_refresh']) {
 	$data['config']['max_in_table'] = get_request('max_in_table');
 	$data['config']['event_expire'] = get_request('event_expire');
 	$data['config']['event_show_max'] = get_request('event_show_max');
+	$data['config']['server_check_enabled'] = get_request('server_check_enabled');
+	$data['config']['server_check_interval'] = get_request('server_check_interval', 30);
 }
 else {
 	$data['config'] = select_config(false);
+	$data['config']['server_check_enabled'] = (bool) $data['config']['server_check_interval'];
+
+	if (!$data['config']['server_check_interval']) {
+		$data['config']['server_check_interval'] = 30;
+	}
 }
 
 $guiForm = new CView('administration.general.gui.edit', $data);
@@ -125,4 +132,3 @@ $cnf_wdgt->addItem($guiForm->render());
 $cnf_wdgt->show();
 
 require_once dirname(__FILE__).'/include/page_footer.php';
-?>
