@@ -17,12 +17,9 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
+
 require_once dirname(__FILE__).'/include/config.inc.php';
-require_once dirname(__FILE__).'/include/hosts.inc.php';
-require_once dirname(__FILE__).'/include/httptest.inc.php';
-require_once dirname(__FILE__).'/include/forms.inc.php';
 
 $page['title'] = _('Status of Web monitoring');
 $page['file'] = 'httpmon.php';
@@ -31,9 +28,6 @@ $page['hist_arg'] = array('open','groupid','hostid');
 define('ZBX_PAGE_DO_REFRESH', 1);
 
 require_once dirname(__FILE__).'/include/page_header.php';
-
-?>
-<?php
 
 //		VAR				TYPE		OPTIONAL	FLAGS	VALIDATION	EXCEPTION
 	$fields = array(
@@ -65,9 +59,6 @@ require_once dirname(__FILE__).'/include/page_header.php';
 	}
 //--------
 	validate_sort_and_sortorder('wt.name',ZBX_SORT_DOWN);
-?>
-<?php
-	// $_REQUEST['applications'] = get_request('applications',CProfile::get('web.httpmon.applications',array()));
 
 	$_REQUEST['applications'] = get_request('applications', get_favorites('web.httpmon.applications'));
 	$_REQUEST['applications'] = zbx_objectValues($_REQUEST['applications'], 'value');
@@ -98,12 +89,9 @@ require_once dirname(__FILE__).'/include/page_header.php';
 	foreach ($_REQUEST['applications'] as $application) {
 		add2favorites('web.httpmon.applications', $application);
 	}
-	// CProfile::update('web.httpmon.applications',$_REQUEST['applications'],PROFILE_TYPE_ARRAY_ID);
-?>
-<?php
+
 
 	$httpmon_wdgt = new CWidget();
-
 // Table HEADER
 	$fs_icon = get_icon('fullscreen', array('fullscreen' => $_REQUEST['fullscreen']));
 	$httpmon_wdgt->addPageHeader(_('STATUS OF WEB MONITORING'), $fs_icon);
@@ -330,5 +318,3 @@ require_once dirname(__FILE__).'/include/page_header.php';
 
 
 require_once dirname(__FILE__).'/include/page_footer.php';
-
-?>
